<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second_activity">

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/common_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_an_item_from_below"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/CommonItems"
        app:layout_constraintTop_toBottomOf="@id/common_header"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rice"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:onClick="confirm"/>

            <Button
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:onClick="confirm"/>

            <Button
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheese"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:onClick="confirm"/>

            <Button
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apples"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:onClick="confirm"/>

            <Button
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oranges"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:onClick="confirm"/>

            <Button
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lemons"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:onClick="confirm"/>

            <Button
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toms"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:onClick="confirm"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>