<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_common_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="launchSecondActivity"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/EditTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/scrollView"
            app:layout_constraintTop_toTopOf="@id/scrollView"
            tools:layout_editor_absoluteX="8dp">

            <EditText
                android:id="@+id/Item1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/Item10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

